edited css and html (index)

--- a/index.html
+++ b/index.html
@@ -18,10 +18,23 @@
 		<li><a href="index.html" class="selected">Home</a></li>
 		<li><a href="">About Clouds</a></li>
 		<li><a href="">Weather</a></li>
-	</ul>	
-</nav>
-
+		<br><li><div class="searchbar"> 
+		<label>Search</label>
+		<input type="search" placeholder="Search"></div></li>
+			</div>
+	</ul>
+</nav>	
 </div>
+
+<figure>
+	<img src=" http://placehold.it/350x150" alt="" class="home-cloud">
+	<p>Types of *clouds*, how they are formed, what happens during *formation*, and what kind of *weather* relates to each type of cloud. Each type of cloud and the type of weather created will be explained thoroughly, an image will be shown to demonstrate what it would look like as well.</p>
+</figure>
+
+ <footer>
+		<p class="copyright">©2013 C Chartrand. All Rights Reserved</p>
+</footer>
+
 
 
 </body>
