--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <!-- end carousel -->
 
       <!-- Example row of columns -->
-      <div class="row" main role="main" id="main">
+      <div class="row" role="main" id="main">
         <div class="span4">
           <h2>What is a cloud?</h2>
            <p>A cloud is a visible mass of liquid droplets or frozen crystals made of water or various chemicals suspended in the atmosphere above the surface of a planetary body. These suspended particles are also known as aerosols and are studied in the cloud physics branch of meteorology.</p>
