physical categories and weather added

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
         <div class="span4">
           <h2>What is a cloud?</h2>
            <p>A cloud is a visible mass of liquid droplets or frozen crystals made of water or various chemicals suspended in the atmosphere above the surface of a planetary body. These suspended particles are also known as aerosols and are studied in the cloud physics branch of meteorology.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p></main>
+          <p><a class="btn" href="physical-categories.html">View details &raquo;</a></p></main>
         </div> <div class="span4">
           <h2>How do Clouds Form</h2>
            <p>Clouds form when rising air, through expansion, cools to the point where some of the water vapor molecules "clump together" faster than they are torn apart by their thermal energy. Some of that (invisible) water vapor condenses to form (visible) cloud droplets or ice crystals. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="weather.html">View details &raquo;</a></p>
        </div>
         <div class="span4">
           <h2>Today's Weather</h2>
            <p>A mix of sun and cloud. Becoming cloudy late in the afternoon. High 16. UV index 3 or moderate.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="weather.html">View details &raquo;</a></p>
        </div>
 	     <div class="span4">
           <h2>Tonight's Weather</h2>
