--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	     <div class="span4">
           <h2>Tonight's Weather</h2>
            <p>Partly cloudy. Showers beginning early this evening and ending near midnight then 60 percent chance of showers late this evening and after midnight. Low 10. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a class="btn" href="weather.html">View details &raquo;</a></p>
        </div>
 
     </div> <!-- /container -->
