weather page completed

--- a/weather.html
+++ b/weather.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Cirrus Clouds</title>
+<title>Weather</title>
 <link rel="stylesheet" href="css/general.css">
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
@@ -35,14 +35,14 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
-              <li><a href="#about">Weather</a></li>
+              <li class="active"><a href="weather.html">Weather</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       About Clouds
                       <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li class="active"><a href="cirrus-clouds.html">Cirrus Clouds</a></li>
+                  <li><a href="cirrus-clouds.html">Cirrus Clouds</a></li>
                   <li><a href="stratus-clouds.html">Stratus Clouds</a></li>
 				  <li><a href="cumulus-clouds.html">Cumulus Clouds</a></li>
 				   <li><a href="physical-categories.html">Physical Categories of Clouds</a></li>
@@ -65,32 +65,51 @@
       <!-- Example row of columns -->
       <div class="row" id="main">
         <div class="span4">
-         <h2>Cirrus Clouds</h2>
-		 <img src="img/sanfran-cirrus-cloud.jpg" alt"Cirrus Clouds in San Francisco">
-	<h2 class="media-title">About Cirrus Clouds</h2>
-           <p>Cirrus (cloud classification symbol: Ci) is a genus of atmospheric cloud generally characterized by thin, wispy strands, giving the type its name from the Latin word cirrus meaning a ringlet or curling lock of hair.The strands of cloud sometimes appear in tufts of a distinctive form referred to by the common name of "mares' tails".
-Cirrus generally appears white or light gray in color. It forms when water vapor undergoes deposition at altitudes above 5,000 m (16,500 ft) in temperate regions and above 6,100 m (20,000 ft) in tropical regions. It also forms from the outflow of tropical cyclones or the anvils of cumulonimbus cloud. Since cirrus cloud arrives in advance of the frontal system or tropical cyclone, it indicates that weather conditions may soon deteriorate. While it indicates the arrival of precipitation (rain), cirrus cloud per se produces only fall streaks (falling ice crystals that evaporate before landing on the ground).
-Jet stream-powered cirrus can grow long enough to stretch across continents, but it remains only a few kilometers deep. When visible light interacts with the ice crystals in cirrus cloud, it produces optical phenomena such as sun dogs and haloes. Cirrus is known to raise the temperature of the air beneath the main cloud layer by an average of 10 °C (18 °F). When the individual filaments become so extensive that they are virtually indistinguishable from one another, they form a sheet of high cloud called cirrostratus. Convection at high altitudes can produce another high based genus called cirrocumulus, a pattern of small cloud tufts that contain droplets of supercooled water.
-Cirrus clouds form on other planets, including Mars, Jupiter, Saturn, Uranus, and possibly Neptune. They have even been seen on Titan, one of Saturn's moons. Some of these extraterrestrial cirrus clouds are composed of ammonia or methane ice rather than water ice. The term cirrus is also used for certain interstellar clouds composed of sub-micrometer sized dust grains.</p>
+         <h2>Weather</h2>
+</div>
+		<img src="img/weather-table.png" alt"This week's weather" class="weather-table">
+		<div class="span4">
+	<h2 class="media-title">Clouds and weather forecasting</h2>
+           <p>The identification and reporting of clouds contribute to the process of weather forecasting. Satellite pictures used in conjunction with the cloud symbols plotted on weather maps provide the forecaster with important information about conditions within the troposphere and the weather systems that form as a result.</p>
+		<p>Weather maps plotted and analyzed at weather forecasting centers employ special symbols to denote various cloud families, genera, species, varieties, mutations, and cloud movements that are considered important to identify conditions in the troposphere that will assist in preparing the forecasts. The cloud symbols are translated from numerical codes included with other meteorological data that make up the contents of international synoptic messages transmitted at regular intervals by professionally trained staff at major weather stations. In a couple of cases, an entire genus like cirrocumulus is represented by one cloud symbol, regardless of species, varieties, or any other considerations. In general though, the codes and their symbols are used to identify cloud types at the species level. A number of varieties and supplementary features are also deemed important enough to have their own weather map symbols. For the sake of economy, a particular genus, species, or variety may share a numerical reporting code and symbol with another similar cloud type. Sometimes, a separate symbol is used to indicate whether or not a particular genus has transformed or emerged from a mother cloud of another genus, or is increasing in amount or invading the sky (usually in the form of parallel bands in a radiatus configuration) ahead of an approaching weather disturbance.</p>
 </div>
 	<div class="span4">
-		 <h2 class="media-title">Description</h2>
-           <p>Cirrus cloud ranges in thickness from 100 m (330 ft) to 8,000 m (26,000 ft), with an average thickness of 1,500 m (4,900 ft). There are, on average, 30 ice crystals per liter (96 ice crystals per gallon), but this ranges from one ice crystal per 10,000 liters (3.7 ice crystals per 10,000 gallons) to 10,000 ice crystals per liter (37,000 ice crystals per gallon), a difference of eight orders of magnitude. The length of each of these ice crystals is usually 0.25 millimeters long, but they range from as short as 0.01 millimeters or as long as several millimeters. The ice crystals in contrails are much smaller than those in naturally-occurring cirrus cloud, as they are around 0.001 millimeters to 0.1 millimeters in length. Cirrus can vary in temperature from −20 °C (−4 °F) to −30 °C (−22 °F).
-The ice crystals in cirrus cloud have different shapes in addition to different sizes. Some shapes include solid columns, hollow columns, plates, rosettes, and conglomerations of the various other types. The shape of the ice crystals is determined by the air temperature, atmospheric pressure, and ice supersaturation. Cirrus in temperate regions typically have the shapes segregated by type: the columns and plates tend to be at the top of the cloud, whereas the rosettes and conglomerations tend to be near the base. In the northern Arctic region, cirrus tend to be composed of only the columns, plates, and conglomerations, and these crystals tend to be at least four times larger than the minimum size. In Antarctica, cirrus are usually composed of only the columns, and these columns are much longer than normal.</p>
+		 <h2 class="media-title">Warm front or low-pressure area</h2>
+           <p>The presence of significant high cirrus or cirrostratus cloud cover indicates an organized low-pressure disturbance or an associated warm front is about 300 km away from the point of observation. Clouds associated with warm fronts tend to be mostly stratiform in structure at all altitude levels. However, if cirrocumulus also appears, there is greater airmass instability arriving with the front which increases the risk that thunderstorms may accompany the system. When these high clouds progressively invade the sky and the barometric pressure begins to fall, precipitation associated with the disturbance is likely about 24 to 36 hours away. A thickening and lowering of cirrostratus into mid-level altostratus is a good sign the warm front or low has moved closer and precipitation may begin within 24 hours. A further thickening of the altostratus is often accompanied by virga and the arrival of precipitation is imminent. The cloud layer achieves significant vertical extent as it lowers and changes into nimbostratus. Rain or snow begins to reach surface level at the beginning of a precipitation event that can last up to 36 hours depending and the size of the weather system and its speed of movement. As the low and the warm front pass, the nimbostratus thins out into low stratus and the precipitation tapers off.</p>
+		   	<img src="img/low.jpg" alt"low clouds">
        </div>
         <div class="span4">
-          <h2 class="media-title">Relation to other clouds</h2>
-           <p>Cirrus clouds are one of three different genera of high-étage (high-level) clouds. High-étage clouds form at 5,000 m (16,500 ft) and above in temperate regions. The other two genera, cirrocumulus and cirrostratus, are also high clouds.
-In the intermediate range, from 2,000 m (6,500 ft) to 7,000 m (23,000 ft) in temperate regions, are the mid-étage clouds. They comprise two or three genera depending on the system of height classification being used: altostratus, altocumulus, and, according to WMO classification, nimbostratus. These clouds are formed from ice crystals, supercooled water droplets, or liquid water droplets.
-Low-étage clouds, form at less than 2,000 m (6,500 ft). The two genera that are strictly low-étage are stratus, and stratocumulus. These clouds are composed of water droplets, except during winter when they are formed of supercooled waterdroplets or ice crystals if the temperature at cloud level is below freezing. Two additional genera usually form in the low altitude range, but may be based at higher levels under conditions of very low humidity. They comprise the genera cumulus, and cumulonimbus, which along with nimbostratus, are often classified separately as clouds of vertical development, especially when their tops are high enough to be composed of super-cooled water droplets or ice crystals.
-The altitudes of high-étage clouds like cirrus vary considerably with latitude. In the polar regions, they are at their lowest, with a minimum altitude of only 3,000 m (10,000 ft) to a maximum of 7,600 m (25,000 ft). In tropical regions, they are at their highest, ranging in altitude from about 6,100 m (20,000 ft) to around 18,000 m (60,000 ft). In temperate regions, they range in altitude from 5,000 m (16,500 ft) to 14,000 m (45,000 ft)—a variation in contrast to low-étage clouds, which do not appreciably change altitude with latitude.</p>
-	<img src="img/cirrocumulus-clouds.jpg" alt"Cirrocumulus Clouds">
+          <h2 class="media-title">Cold Front</h2>
+           <p>A cold front tends to give less warning of its approach because it usually moves faster than a warm front and has a narrower band of clouds and weather. If the cold front is active enough to produce thunderstorms, anvil cirrus clouds may spread ahead of the front as a warning of its approach. The other cloud types associated with a cold front depend on atmospheric conditions such as air mass stability and wind shear, but are mostly cumuliform or stratocumuliform, with mid-level altocumulus giving way to lower stratocumulus and intermittent light precipitation if there is only slight airmass instability. With significant instability, vertically developed cumulus or cumulonimbus with showers and thunderstorms will form along the front.</p>
        </div>
 	     <div class="span4">
-          <h2 class="media-title">Cirrocumulus</h2>
-           <p>Cirrocumulus clouds form in sheets or patches and do not cast shadows. They commonly appear in regular, rippling patterns or in rows of clouds with clear areas between. Cirrocumulus are, like other members of the cumuliform category, formed via convective processes. Significant growth of these patches indicates high-altitude instability and can signal the approach of poorer weather. The ice crystals in the bottoms of cirrocumulus clouds tend to be in the form of hexagonal cylinders. They are not solid, but instead tend to have stepped funnels coming in from the ends. Towards the top of the cloud, these crystals have a tendency to clump together. These clouds do not last long, and they tend to change into cirrus because as the water vapor continues to deposit on the ice crystals, they eventually begin to fall, destroying the upward convection. The cloud then dissipates into cirrus. Cirrocumulus clouds come in four species: stratiformis, lenticularis, castellanus, and floccus. They are iridescent when the constituent supercooled water droplets are all about the same size.</p>
-		<h2 class="media-title">Cirrostratus</h2>
-		<p>Cirrostratus clouds can appear as a milky sheen in the sky or as a striated sheet. They are sometimes similar to altostratus and are distinguishable from the latter because the sun or moon is always clearly visible through transparent cirrostratus, in contrast to altostratus which tends to be opaque or translucent. Cirrostratus come in two species, fibratus and nebulosus. The ice crystals in these clouds vary depending upon the height in the cloud. Towards the bottom, at temperatures of around −35 °C (−31 °F) to −45 °C (−49 °F), the crystals tend to be long, solid, hexagonal columns. Towards the top of the cloud, at temperatures of around −47 °C (−53 °F) to −52 °C (−62 °F), the predominant crystal types are thick, hexagonal plates and short, solid, hexagonal columns. These clouds commonly produce halos, and sometimes the halo is the only indication that such clouds are present. They are formed by warm, moist air being lifted slowly to a very high altitude. When a warm front approaches, cirrostratus clouds become thicker and descend forming altostratus clouds, and rain usually begins 12 to 24 hours later.</p>
+          <h2 class="media-title">High-pressure area</h2>
+           <p>After the passage of the front, the sky usually clears as high pressure builds in behind the system, although significant amounts of cumulus or stratocumulus, often in the form of long bands called cloud streets may persist if the air mass behind the front remains humid. Small and unchanging amounts of cumulus or cirrus clouds in an otherwise clear sky are usually indications of continuing fair weather as long as the barometric pressure remains comparatively high</p>
+		</div>
+		<div class="span4">
+		<h2 class="media-title">Rainmaking Bacteria</h2>
+		<p>There is evidence that clouds, especially in the weather-making troposphere, contain biological ice nuclei that may play a key role in the formation of precipitation. Bioprecipitation, the concept of rain-making bacteria, was proposed by David Sands from Bozeman Campus, Montana State University, USA. Such microbes – called ice nucleators – are found in rain, snow, and hail throughout the world. These bacteria may be part of a constant feedback between terrestrial ecosystems and tropospheric clouds and may even have evolved the ability to promote rainstorms as a means of dispersal. They may rely on the rainfall to spread to new habitats, much as some plants rely on windblown pollen grains</p>
+		</div>
+		<div class="span4">
+		<h2 class="media-title">Precipitation</h2>
+		<p>Cumulus humilis clouds usually indicate fair weather. Cumulus mediocris clouds are similar, except that they have some vertical development, which implies that they can grow into cumulus congestus or even cumulonimbus clouds, which can produce heavy rain, lightning, severe winds, hail, and even tornadoes. Cumulus congestus clouds, which appear as towers, will often grow into cumulonimbus storm clouds. They can produce precipitation. Glider pilots often pay close attention to cumulus clouds, as they can be indicators of rising air drafts or thermals underneath that can suck the plane high into the sky—a phenomenon known as cloud suck.
+Cumulus clouds can also produce acid rain or possibly a tornado. The acidity is largely formed by the oxidation of sulfur dioxide, the most plentiful acidifying gas, into sulfate ions. The main oxidizing compounds are hydrogen peroxide and ozone. Various nitrogen oxides can also react with hydroxide ions to form acids.</p>
+	<img src="img/rain.jpg" alt"Rain Clouds">
+		<p>A stratus cloud can form from stratocumulus spreading out under an inversion, indicating a continuation of prolonged cloudy weather with drizzle for several hours and then an improvement as it breaks into stratocumulus. Stratus clouds can persist for days in anticyclone conditions. It is common for a stratus to form on a weak warm front, rather than the usual nimbostratus.</p>
+</div>
+		<div class="span4">
+		<h2 class="media-title">Cyclones</h2>
+		<p>Cirrus forms from tropical cyclones, and is commonly seen fanning out from the eyewalls of hurricanes. A large shield of cirrus and cirrostratus typically accompanies the high altitude outflow of hurricanes or typhoons, and these can make the underlying rain bands—and sometimes even the eye—difficult to detect in satellite photographs.</p>
+		<img src="img/hurricane.jpg" alt"Hurricane Formation">
+		</div>
+		<div class="span4">
+		<h2 class="media-title">Thunderstorms</h2>
+		<p>Thunderstorms form dense cirrus often in the shape of anvils. As the cumulonimbus cloud in a thunderstorm grows vertically, the liquid water droplets freeze when the air temperature reaches the freezing point. The anvil cloud takes its shape because the temperature inversion at the tropopause prevents the warm, moist air forming the thunderstorm from rising any higher, thus creating the flat top.[18] In the tropics, these thunderstorms occasionally produce copious amounts of cirrus from their anvils. High-altitude winds commonly push this dense mat out into an anvil shape that stretches downwind as much as several kilometers.
+Individual cirrus cloud formations can be the remnants of anvil clouds formed by thunderstorms. In the dissipating stage of a cumulonimbus cloud, when the normal column rising up to the anvil has evaporated or dissipated, the mat of cirrus in the anvil is all that is left.</p>
+<p>Contrails are a manmade type of cirrus cloud formed when water vapor from the exhaust of a jet engine condenses on particles, which come from either the surrounding air or the exhaust itself, and freezes, leaving behind a visible trail. The exhaust can also trigger the formation of cirrus by providing ice nuclei when there is an insufficient naturally-occurring supply in the atmosphere. One of the environmental impacts of aviation is that persistent contrails can form into large mats of cirrus, and increased air traffic has been implicated as one possible cause of the increasing frequency and amount of cirrus cloud in Earth's atmosphere.</p>
+		<img src="img/thunder-clouds-pictures.jpg" alt"Thunder and Lightning">
+		</div>
+
 		
 		   
        </div>
