--- a/weather.html
+++ b/weather.html
@@ -90,6 +90,12 @@
 		<h2 class="media-title">Rainmaking Bacteria</h2>
 		<p>There is evidence that clouds, especially in the weather-making troposphere, contain biological ice nuclei that may play a key role in the formation of precipitation. Bioprecipitation, the concept of rain-making bacteria, was proposed by David Sands from Bozeman Campus, Montana State University, USA. Such microbes – called ice nucleators – are found in rain, snow, and hail throughout the world. These bacteria may be part of a constant feedback between terrestrial ecosystems and tropospheric clouds and may even have evolved the ability to promote rainstorms as a means of dispersal. They may rely on the rainfall to spread to new habitats, much as some plants rely on windblown pollen grains</p>
 		</div>
+				<div class="span4">
+		<h2 class="media-title">Tornado</h2>
+		<p>	A tornado is a violently rotating column of air that is in contact with both the surface of the earth and a cumulonimbus cloud or, in rare cases, the base of a cumulus cloud. They are often referred to as twisters or cyclones, although the word cyclone is used in meteorology, in a wider sense, to name any closed low pressure circulation. Tornadoes come in many shapes and sizes, but they are typically in the form of a visible condensation funnel, whose narrow end touches the earth and is often encircled by a cloud of debris and dust. Most tornadoes have wind speeds less than 110 miles per hour (177 km/h), are about 250 feet (76 m) across, and travel a few miles (several kilometers) before dissipating. The most extreme tornadoes can attain wind speeds of more than 300 miles per hour (483 km/h), stretch more than two miles (3.2 km) across, and stay on the ground for dozens of miles (more than 100 km).
+Various types of tornadoes include the landspout, multiple vortex tornado, and waterspout. Waterspouts are characterized by a spiraling funnel-shaped wind current, connecting to a large cumulus or cumulonimbus cloud. They are generally classified as non-supercellular tornadoes that develop over bodies of water, but there is disagreement over whether to classify them as true tornadoes. These spiraling columns of air frequently develop in tropical areas close to the equator, and are less common at high latitudes. Other tornado-like phenomena that exist in nature include the gustnado, dust devil, fire whirls, and steam devil; downbursts are frequently confused with tornadoes, though their action is dissimilar.</p>
+		<img src="img/tornado.jpg" alt"Tornado">
+		</div>
 		<div class="span4">
 		<h2 class="media-title">Precipitation</h2>
 		<p>Cumulus humilis clouds usually indicate fair weather. Cumulus mediocris clouds are similar, except that they have some vertical development, which implies that they can grow into cumulus congestus or even cumulonimbus clouds, which can produce heavy rain, lightning, severe winds, hail, and even tornadoes. Cumulus congestus clouds, which appear as towers, will often grow into cumulonimbus storm clouds. They can produce precipitation. Glider pilots often pay close attention to cumulus clouds, as they can be indicators of rising air drafts or thermals underneath that can suck the plane high into the sky—a phenomenon known as cloud suck.
@@ -98,17 +104,19 @@ Cumulus clouds can also produce acid rain or possibly a tornado. The acidity is 
 		<p>A stratus cloud can form from stratocumulus spreading out under an inversion, indicating a continuation of prolonged cloudy weather with drizzle for several hours and then an improvement as it breaks into stratocumulus. Stratus clouds can persist for days in anticyclone conditions. It is common for a stratus to form on a weak warm front, rather than the usual nimbostratus.</p>
 </div>
 		<div class="span4">
-		<h2 class="media-title">Cyclones</h2>
-		<p>Cirrus forms from tropical cyclones, and is commonly seen fanning out from the eyewalls of hurricanes. A large shield of cirrus and cirrostratus typically accompanies the high altitude outflow of hurricanes or typhoons, and these can make the underlying rain bands—and sometimes even the eye—difficult to detect in satellite photographs.</p>
-		<img src="img/hurricane.jpg" alt"Hurricane Formation">
-		</div>
-		<div class="span4">
 		<h2 class="media-title">Thunderstorms</h2>
 		<p>Thunderstorms form dense cirrus often in the shape of anvils. As the cumulonimbus cloud in a thunderstorm grows vertically, the liquid water droplets freeze when the air temperature reaches the freezing point. The anvil cloud takes its shape because the temperature inversion at the tropopause prevents the warm, moist air forming the thunderstorm from rising any higher, thus creating the flat top.[18] In the tropics, these thunderstorms occasionally produce copious amounts of cirrus from their anvils. High-altitude winds commonly push this dense mat out into an anvil shape that stretches downwind as much as several kilometers.
 Individual cirrus cloud formations can be the remnants of anvil clouds formed by thunderstorms. In the dissipating stage of a cumulonimbus cloud, when the normal column rising up to the anvil has evaporated or dissipated, the mat of cirrus in the anvil is all that is left.</p>
 <p>Contrails are a manmade type of cirrus cloud formed when water vapor from the exhaust of a jet engine condenses on particles, which come from either the surrounding air or the exhaust itself, and freezes, leaving behind a visible trail. The exhaust can also trigger the formation of cirrus by providing ice nuclei when there is an insufficient naturally-occurring supply in the atmosphere. One of the environmental impacts of aviation is that persistent contrails can form into large mats of cirrus, and increased air traffic has been implicated as one possible cause of the increasing frequency and amount of cirrus cloud in Earth's atmosphere.</p>
 		<img src="img/thunder-clouds-pictures.jpg" alt"Thunder and Lightning">
 		</div>
+			<div class="span4">
+		<h2 class="media-title">Cyclones</h2>
+		<p>Cirrus forms from tropical cyclones, and is commonly seen fanning out from the eyewalls of hurricanes. A large shield of cirrus and cirrostratus typically accompanies the high altitude outflow of hurricanes or typhoons, and these can make the underlying rain bands—and sometimes even the eye—difficult to detect in satellite photographs.</p>
+		<img src="img/hurricane.jpg" alt"Hurricane Formation">
+		</div>
+		
+	
 
 		
 		   
